Added JMath Added GridLines
Added JMath class, Grid Lines for easier snapping to grid.  implemented snapping to grid, cleaned up and commented out level editor scene